# microtonal-daw

./: .gitignore  .gitmodules  CMakeLists.txt  DAW.jucer  README.md  index.html  keys.js  pianoroll.css  pianoroll.js
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  include_tracktion_engine_airwindows_1.cpp  include_tracktion_engine_airwindows_2.cpp  include_tracktion_engine_airwindows_3.cpp
Source/: Main.cpp  MainComponent.cpp
old-html/: data.html  data.js  plan
old-html/pianoroll/: index.html  keys.js  notes.js  pianoroll.css  pianoroll.js
src/: '  AudioClip.cpp  AudioClip.h  AudioManager.cpp  AudioManager.h  Bus.h  BusManager.cpp  BusManager.h  Button.cpp  Button.h  ContextMenu.cpp  ContextMenu.h  ControlArea.cpp  ControlArea.h  EditorHostFrame.cpp  EditorHostFrame.h  EditorWindowHost.h  EditorWindowHost_Linux.cpp  ElementManager.cpp  ElementManager.h  EventList.h  EventManager.cpp  EventManager.h  Geometry.cpp  Geometry.h  GridElement.cpp  GridElement.h  GridView.cpp  GridView.h  Home.cpp  Home.h  Instrument.cpp  Instrument.h  InstrumentList.cpp  InstrumentList.h  InstrumentMenu.cpp  InstrumentMenu.h  MainComponent.cpp  MainComponent.h  MidiRouter.cpp  (+86 more)
src/nodes/: nodetype.h  nodetypes.h
src/nodes/arranger/: arranger.cpp  arranger.h
src/nodes/delay/: delay.cpp  delay.h
src/nodes/merger/: merger.cpp  merger.h
src/nodes/osc/: osc.cpp  osc.h
src/nodes/panner/: panner.cpp  panner.h
src/nodes/patcher/: patcher.cpp  patcher.h
src/nodes/splitter/: splitter.cpp  splitter.h
